1999-02-21  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* main.cc: Undef inline at first.
	Modify comments.
	(main): Add exception handling.
	(main): Use EXIT_SUCCESS.

1999-02-17  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (dist-snapshot): Add suffix with x to VERSION.

1999-02-14  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* options.cc (populate): Add the Rendering tab.

	* glclock.cc (edit_options): New function.  Update the header too.
	(glclock): Add the function to the popup menu.
	(glclock): Move a comment.

	* options.cc: New file.
	* Makefile.am (rglclock_SOURCES): Add options.cc.

	* glclock.h (class options_dialog): New class.

	* gtkrc: New file.
	* Makefile.am (pkgdata_DATA): Add gtkrc.
	(EXTRA_DIST): Add gtkrc.

1999-02-13  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc (finish_realize): New function.  Update the header
	too.
	(handle_configure_event): Remove context creation.
	(glclock): Connect "realize".

	* about.cc (show): Use gtk_grab_add/remove.
	(finish_realize): Renamed and modified from handle_configure_event
	for the "realize" signal.  Update all refs too.
	(about_dialog): Add "realize" connection and remove
	"configure_event".

	* main.cc (parse_gtkrc) [PKGDATADIR]: Add gtk_rc_parse for default
	gtkrc file.

	* Makefile.am (INCLUDES): Add -DPKGDATADIR=....

	* gettextize.
	* po/POTFILES.in: New file.
	* po/ja.po: New file.
	* configure.in (ALL_LINGUAS): Add ja.

	* main.cc (parse_gtkrcs): New function.
	(main): Initialize NLS.
	(main): Use parse_gtkrcs.

1999-02-12  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* glclock.cc: Add #include <libintl.h>.
	Add using namespace std.
	(_): Defined.
	(glclock): Use the _ macro for message text.

	* about.cc: Add #include <libintl.h>.
	(_): Defined to use gettext.

	* main.cc: Add #include <libintl.h>.
	(_): Defined.

	* Makefile.am (INCLUDES): Add -DLOCALEDIR=....

1999-02-05  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* Makefile.am (data_DATA): Added.
